# VSingerXrossPlayer

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  webpack.config.js
backend/: .env.example  .gitignore  config.py  main.py  masterdata.py  models.py  pyproject.toml  requirements.txt
backend/collector/: README.md  __init__.py  __main__.py  config.py  run_once.py  youtube_client.py
backend/db/: __init__.py  dynamo.py  memory.py
backend/scripts/: create_tables.py
collector/: .env.example  .gitignore  README.md  __main__.py  config.py  db.py  enrich_batch.py  enricher.py  gemini_client.py  handler.py  pyproject.toml  run_once.py  test_resolution.py  test_url_parser.py  url_parser.py  youtube_client.py
collector/scripts/: create_tables.py
src/: App.tsx  client.min.js  data.json  env.d.ts  index.html  license.html  main.ts
src/api/: client.ts
src/components/: AIVisualizer.tsx  BackgroundVideo.tsx  Main.tsx  VideoDetailCard.tsx  WordCloud.tsx  XMBCategory.tsx  XMBContainer.tsx  XMBItem.tsx  YouTubePlayer.tsx
src/d3/: App.ts  NavigationController.ts  RadarChart.ts  VideoDetailCard.ts  WordCloud.ts  XMBInterface.ts
src/hooks/: useData.ts  useXMBNavigation.ts
src/js/components/: Column.js  Footer.js  Header.js  Layout.js
src/js/components/Header/: Title.js
src/types/: index.ts  video.ts
src/types/google.accounts/: index.d.ts
src/utils/: format.ts
