[project]
name = "vsinger-xross-backend"
version = "0.1.0"
description = "Backend for VSingerXrossPlayer (FastAPI + DynamoDB/Lambda-ready)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "boto3>=1.35.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.2.0",
  "mangum>=0.17.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "main", "masterdata", "models"]
packages = ["db"]

[tool.uv]
package = true
