[project]
name = "vsinger-xross-collector"
version = "0.1.0"
description = "YouTube video metadata collector for VSingerXrossPlayer"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.2.0",
  "requests>=2.31.0",
  "isodate>=0.6.1",
  "more-itertools>=10.1.0",
  "mangum>=0.17.0",
  "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "config",
  "db",
  "enricher",
  "enrich_batch",
  "gemini_client",
  "handler",
  "run_once",
  "youtube_client",
]

[tool.uv]
package = true
